[gd_scene load_steps=2 format=3 uid="uid://dwtpbxr7ti74i"]

[ext_resource type="Script" path="res://UI/MouseDetection/MouseDetection.gd" id="1_uukjm"]

[node name="MouseDetection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -909.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uukjm")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
